# peak_fl_analysis

./: .gitignore  CLAUDE.md  CLAUDE_old.md  bash.exe.stackdump  examples.md  pyproject.toml  skills-lock.json
docs/: finding_grounds_of_roundCB.md  fl_methodologies_fedsgd_vs_fedavg.md  v06_v07_crosscheck_audit.md
docs/literlature/: nbeatsx_2104_05522.md
experiments/: README.md  extract_paper_evidence.py
experiments/nbeats_analysis/: probe_h_generic.py  train_clean_nbeatsx.py
experiments/scratch_daily_peak_periodicity/: 01_decompose_daily_peak.py  02_decompose_50hh.py  03_intercorr_pca_loo.py  04_transfer_experiment.py  05_k_sweep_random_control.py  06_verify_paper_h4.py  07_within_hh_peak_hour.py  README.md
graphify-out/: .graphify_labels.json  .graphify_python  .graphify_root  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
papers/: README.md  v08_v09_report_deck.html  v09_analysis_report.html  v09_roundcb_methodology.html  v09_roundcb_methodology_draft.md  v09_roundcb_vs_fedvq_report.html
plans/: v01-01_peak_from_latent_test.md  v02-01_fl_8020_ratio.md  v03-01_kshot_pfl.md  v04-01_full_baseline_comparison.md  v05-01_fedcb_codebook.md  v06-01_round_dynamics.md  v07-01_loss_and_budget_sweeps.md  v08-01_sequential_fl.md  v09-01_round_wise_codebook.md
src/: config.py
src/fl/: base.py  (+12 more)
tests/: test_centralised_pooled.py  test_codebook_fl.py  test_fedavg_aux.py  test_per_client_split.py  test_round_logger.py  test_v06_codebook_stacking.py  test_v06_drivers_naming.py  test_v07_aux_sweep.py  test_v07_hr_weight_sweep.py
tools/: unwrap_md.py
(+157 files in other folders)
