[project]
name = "peak-proto"
version = "0.1.0"
description = "Peak-aware federated forecasting with post-hoc Key-Value VQ (v11)"
requires-python = "==3.11.*"
dependencies = [
    "pandas>=3.0.1",
    "numpy>=2.4.2",
    "matplotlib>=3.10.8",
    "seaborn>=0.13.2",
    "scipy>=1.17.0",
    "pulp>=3.3.0",
    "statsmodels>=0.14.6",
    "scikit-learn>=1.8.0",
    "notebook>=7.5.3",
    "ipykernel>=7.2.0",
    "openpyxl>=3.1.5",
    "torch",
    "torchvision",
    "torchaudio",
    "transformers>=4.57.6",
    "chronos-forecasting>=2.2.2",
    "tslearn>=0.8.1",
    "timesfm>=1.3.0",
    "pwlf>=2.5.2",
    "peft>=0.11",
]

[[tool.uv.index]]
name = "pytorch-nightly"
url = "https://download.pytorch.org/whl/nightly/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-nightly" }
torchvision = { index = "pytorch-nightly" }
torchaudio = { index = "pytorch-nightly" }

[tool.uv]
environments = ["sys_platform == 'win32'"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[tool.setuptools]
py-modules = ["config"]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
